Update historia de francia.html

--- a/historia de francia.html
+++ b/historia de francia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Historia del Lugar</title>
-
+<link rel="icon" href="favicon (1).ico" type="image/x-icon">
 <style type="text/css">
 body {
     background-image: url(../Proyecto/france-background-jd06lss3zz8uwjxr.jpg);
