Update cultura de francia.html

--- a/cultura de francia.html
+++ b/cultura de francia.html
@@ -22,8 +22,8 @@
       <tr>
       <th><a href="index.html">Inicio </a></th>
       <th><a href="Lugares turisticos.html">Lugares turisticos</a></th>
-      <th><a href="Historia de Francia.html">Historia</a></th>
-      <th><a href="../Proyecto/Cultura de Francia.html">Cultura</a></th>
+      <th><a href="historia de francia.html">Historia</a></th>
+      <th><a href="../Proyecto/cultura de francia.html">Cultura</a></th>
     </tr>
 	  <tr>
 	  <th colspan="4">Cultura de Francia</th>
