--- a/historia de francia.html
+++ b/historia de francia.html
@@ -20,8 +20,8 @@ body {
 	  <tr>
       <th><a href="index.html">Inicio </a></th>
       <th><a href="Lugares turisticos.html">Lugares turisticos</a></th>
-      <th><a href="Historia de Francia.html">Historia</a></th>
-      <th><a href="../Proyecto/Cultura de Francia.html">Cultura</a></th>
+      <th><a href="historia de francia.html">Historia</a></th>
+      <th><a href="../Proyecto/cultura de francia.html">Cultura</a></th>
     </tr>
 	  <tr>
 	  <th colspan="4">La historia de Francia</th>
